# cyclops-voice

./: .gitignore  Launch Settings.bat  Launch Settings.vbs  README.md  SUBNAUTICA CYCLOPS VOICE RUBRIC v2.0.md  TODO.md  config.example.toml  input.txt  process_voice.bat  pyproject.toml
.claude/: launch.json
docs/superpowers/plans/: 2026-05-29-cyclops-voice-tts.md
docs/superpowers/specs/: 2026-05-29-cyclops-voice-standalone-packaging-design.md  (+1 more)
packaging/: CyclopsVoice.spec  entry.py
scripts/: build_exe.py  install_autostart.py  install_voice_model.py
src/cyclops_voice/: __init__.py  __main__.py  autostart.py  chunker.py  cli.py  client.py  config.py  daemon.py  dsp.py  engine.py  export.py  gui.py  hotkey.py  mcp_server.py  model_download.py  mouse_trigger.py  paths.py  pitch_quantize.py  player.py  server.py  text_under_cursor.py  texture.py  tray.py  tts.py
src/cyclops_voice/web/: app.js  (+2 more)
tests/: acoustics.py  test_acoustic_profile.py  test_chunker.py  test_client.py  test_config.py  test_daemon.py  test_dsp.py  test_engine.py  test_mcp.py  test_model_download.py  test_mouse_trigger.py  test_paths.py  test_player.py  test_server.py
tuning/: build_preview.py  gemini_judge.py  judge_top.py  param_gen.py  param_sets_crush_sweep.json  param_sets_e1_tuned.json  param_sets_e1_tuned_v2.json  param_sets_e1_tuned_v3.json  param_sets_phase2.json  pitch_quantize.py  proxy_score.py  render_matrix.py  render_quantized.py  render_texture.py  results.jsonl  results_view.py  texture.py
tuning/finalists/: E1_tuned_v3.json  pq_v3_full.json  tx_full.json  tx_rasp_med.json
