[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclops-voice"
version = "0.1.0"
description = "System-wide Subnautica Cyclops voice TTS service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pyworld>=0.3.4",
  "pedalboard>=0.9",
  "sounddevice>=0.4.6",
  "piper-tts>=1.2",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pynput>=1.7",
  "pyperclip>=1.8",
  "pystray>=0.19",
  "Pillow>=10",
  "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
cyclops = "cyclops_voice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
